# BeanOS

./: .gitignore  Cargo.toml  LICENSE  README.md
arch/x86_64/: Cargo.toml
arch/x86_64/src/: addr.rs  asm_wrappers.rs  elf.rs  frame.rs  lib.rs  page_table.rs  paging.rs  utils.rs
bootloader/: .gdbinit  Cargo.toml  build  build.rs  debug  linker.ld  run  run_gdb  x86_64-bean_os_bootloader.json
bootloader/.cargo/: config.toml
bootloader/src/: allocator.rs  log.rs  main.rs  mem_region.rs  memory.rs  serial.rs  stage1.s  stage2.s  stage3.s
builder/: main.rs
os/: Cargo.toml  x86_64-bean_os.json
os/.cargo/: config.toml
os/src/: main.rs
