[package]
name = "bean_os_builder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "image_builder"
path = "builder/main.rs"

[dependencies]
llvm-tools-build = { version = "0.1", package = "llvm-tools" }
